Closed
Bug 1420415
Opened 7 years ago
Closed 7 years ago
TextEditor::CreateBRImpl() returns wrong offset if it splits a text node
Categories
(Core :: DOM: Editor, defect)
Core
DOM: Editor
Tracking
()
RESOLVED
FIXED
mozilla59
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox57 | --- | unaffected |
firefox58 | --- | fixed |
firefox59 | --- | fixed |
People
(Reporter: masayuki, Assigned: masayuki)
References
Details
(Keywords: regression)
Attachments
(2 files)
59 bytes,
text/x-review-board-request
|
m_kato
:
review+
|
Details |
1.96 KB,
patch
|
gchang
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
No description provided.
Assignee | ||
Updated•7 years ago
|
status-firefox57:
--- → unaffected
status-firefox58:
--- → affected
Assignee | ||
Comment 1•7 years ago
|
||
Assignee | ||
Comment 2•7 years ago
|
||
Comment hidden (mozreview-request) |
Comment 4•7 years ago
|
||
mozreview-review |
Comment on attachment 8932023 [details]
Bug 1420415 - TextEditor::CreateBRImpl() needs to make pointToInsertBrNode store mOffset before calling EditorBase::CreateNode()
https://reviewboard.mozilla.org/r/203088/#review208372
Attachment #8932023 -
Flags: review?(m_kato) → review+
Pushed by masayuki@d-toybox.com:
https://hg.mozilla.org/integration/autoland/rev/8fc00183c31d
TextEditor::CreateBRImpl() needs to make pointToInsertBrNode store mOffset before calling EditorBase::CreateNode() r=m_kato
Comment 6•7 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Comment 7•7 years ago
|
||
Does this need to be uplifted to Beta or can it ride the 59 train?
status-firefox-esr52:
--- → unaffected
Flags: needinfo?(masayuki)
Assignee | ||
Comment 8•7 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM] from comment #7)
> Does this need to be uplifted to Beta or can it ride the 59 train?
Should be uplifted because it's really simple. But perhaps, I need to create patch for Beta because the code is changed after the last merge. I'll request approval after creating it (or confirming if it's graftable).
Flags: needinfo?(masayuki)
Assignee | ||
Comment 9•7 years ago
|
||
Approval Request Comment
[Feature/Bug causing the regression]:
Regression of bug 1415445.
[User impact if declined]:
*Might* break some web apps with this unexpected behavior change.
[Is this code covered by automated tests?]:
No because I've not found how to hit this behavior change without changing some other code yet.
[Has the fix been verified in Nightly?]:
Yes. I found this bug with fixing another bug which caused new orange. However, this patch fixes the new orange.
[Needs manual test from QE? If yes, steps to reproduce]:
No.
[List of other uplifts needed for the feature/fix]:
No.
[Is the change risky?]:
No.
[Why is the change risky/not risky?]:
Just making the local variable store offset which will be referred after changing DOM tree before changing the DOM tree.
[String changes made/needed]:
No.
Attachment #8932335 -
Flags: approval-mozilla-beta?
Comment 10•7 years ago
|
||
Comment on attachment 8932335 [details] [diff] [review]
Patch for beta (just renamed the variable from the patch for m-c)
A low risk fix. Let's take it in Beta58.
Attachment #8932335 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 11•7 years ago
|
||
bugherder uplift |
You need to log in
before you can comment on or make changes to this bug.
Description
•